--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -16,6 +16,7 @@
         android:orientation="vertical">
 
         <androidx.appcompat.widget.Toolbar
+            app:title="DuckTive"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:id="@+id/toolbar"
@@ -23,6 +24,7 @@
             android:background="@color/lavender"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
 
         <FrameLayout
             android:id="@+id/frame_layout"
