--- a/app/src/main/res/layout/custom_layout_for_insertdata.xml
+++ b/app/src/main/res/layout/custom_layout_for_insertdata.xml
@@ -78,6 +78,7 @@
                     android:layout_height="wrap_content">
 
                     <EditText
+                        android:hint="Investment,Loan,Leisure,Medical,Transport"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/type_edt"/>
