--- a/app/src/main/res/layout/habits_recycler_data.xml
+++ b/app/src/main/res/layout/habits_recycler_data.xml
@@ -71,14 +71,25 @@
                 android:layout_height="wrap_content"
                 android:text="TIME"
                 android:gravity="center"
-                android:layout_marginBottom="90dp"
-                android:layout_marginTop="40dp"
+
                 android:textAppearance="?android:textAppearanceSmall"
                 android:textStyle="bold"
                 android:id="@+id/time_txt_habits"
                 android:textColor="@color/expense_amount"
                 />
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="---"
+                android:gravity="center"
+                android:layout_marginBottom="90dp"
+                android:layout_marginTop="40dp"
+                android:textAppearance="?android:textAppearanceSmall"
+                android:textStyle="bold"
+                android:id="@+id/status_txt_habits"
+                android:textColor="@color/expense_amount"
+                />
 
 
 
