--- a/app/src/main/res/layout/activity_companion.xml
+++ b/app/src/main/res/layout/activity_companion.xml
@@ -6,6 +6,12 @@
     android:id="@+id/layout_container"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Back" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="202dp"
@@ -226,4 +232,5 @@
             />
 
     </LinearLayout>
+
 </FrameLayout>
