--- a/app/src/main/res/layout/custom_layout_for_edittask.xml
+++ b/app/src/main/res/layout/custom_layout_for_edittask.xml
@@ -29,7 +29,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="HABIT NAME:" />
+                        android:text="TASK NAME:" />
 
 
                 </RelativeLayout>
@@ -41,7 +41,7 @@
                     android:layout_weight="2">
 
                     <EditText
-                        android:id="@+id/habitname_edt"
+                        android:id="@+id/taskname_edt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
@@ -78,7 +78,7 @@
 
                     <EditText
                         android:hint="Done, To Do, OnGoing"
-                        android:id="@+id/statusedit_edt"
+                        android:id="@+id/statustask_edt"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
 
