--- a/app/src/main/res/layout/history_recycler_data.xml
+++ b/app/src/main/res/layout/history_recycler_data.xml
@@ -18,7 +18,7 @@
             android:layout_weight="0">
 
             <TextView
-                android:id="@+id/date_txt_task"
+                android:id="@+id/hdate_txt_task"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
 
@@ -28,7 +28,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/time_txt_task"
+                android:id="@+id/htime_txt_task"
                 android:layout_width="100dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="50dp"
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/taskname_txt_tasks"
+                android:id="@+id/htaskname_txt_tasks"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:text="Tasks Name"
@@ -67,7 +67,7 @@
                 android:textAppearance="?android:textAppearanceSmall"
 
                 android:textColor="@android:color/black"
-                android:layout_below="@id/taskname_txt_tasks"
+                android:layout_below="@id/htaskname_txt_tasks"
                 android:id="@+id/desc_txt_tasks"
 
 
